# qt_toyapp

./: MANIFEST.in  Makefile  README.md  environment.yml  requirements.txt  setup.cfg
src/: app.py
src/gui/: __init__.py  isotopinator.py  last_widget.py  plot_widget.py  toyapp.py  ui_last_widget.py  ui_plot_widget.py
src/isotopes/: __init__.py  isotopes.py
src/plots/: color.py  gaussian.py
src/resources/ui/: isotopinator.ui  isotopinator_old.ui  last_widget.ui  main.ui  plot_widget.ui
src/toyapp/: app.py  main.py
src/toyapp/gui/: isotopinator.py  last_widget.py  main.py  plot_widget.py  ui_isotopinator.py  ui_main.py
src/toyapp/isotopes/: AtomicWeightsAndIsotopicDataNIST2021.txt  isotopes.py
src/toyapp/plots/: gaussian.py
