[metadata]
name = toyapp
version = 2022.04.05
author = Germain Salvato Vallverdu
maintainer = Germain Salvato Vallverdu
maintainer_email = germain.vallverdu@univ-pau.fr
description = A toy app using Qt for testing
long_description = file: README.md
long_description_content_type = text/x-markdown; charset=UTF-8
url = https://github.com/gVallverdu/qt_toyapp
project_urls =
    Bug Tracker = https://github.com/gVallverdu/qt_toyapp
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Chemistry

[options]
package_dir =
    =src
packages = find:
install_requires =
    numpy >=1.20.1
    matplotlib >= 3.5.1
    pandas >=1.4.1
    pyqt >= 5.9.2
python_requires = >=3.8

[options.packages.find]
where=src

[options.extras_require]
DEV = sphinx >=4.0.2; jupyter >=6.0.0


